{
    "version": 1,
    "name": "PlayerInput",
    "maps": [
        {
            "name": "InputAction",
            "id": "d359665f-c69a-4657-8bbd-9b033931cef1",
            "actions": [
                {
                    "name": "NextDialogue",
                    "type": "Button",
                    "id": "b4d49862-267d-450c-bbfe-7eac9f93647d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "79f63a15-2145-4c3c-b3ca-495c3ccbd427",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "139072f4-1e63-473d-9ee1-745454eb50d5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3c10388-1524-4059-a75c-cd5194c81635",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7cb9a77-6726-48a1-b911-54e5b6e4de86",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}